--- a/www/.htaccess
+++ b/www/.htaccess
@@ -30,7 +30,7 @@ ErrorDocument 400 /error.php?err=400
 ErrorDocument 401 /error.php?err=401
 ErrorDocument 402 /error.php?err=402
 ErrorDocument 403 /error.php?err=403
-ErrorDocument 404 /error.php?err=404
+ErrorDocument 404 /router.php?%{QUERY_STRING}
 #ErrorDocument 500 /error.php?err=500
 #ErrorDocument 502 /error.php?err=502
 
